--- a/Lyst/WebContent/listitemStyle.css
+++ b/Lyst/WebContent/listitemStyle.css
@@ -1,3 +1,7 @@
+.attributeText{
+	font-size: 18px;
+}
+
 /* Large desktops and laptops */
 @media
 (
@@ -93,14 +97,17 @@ max-width
 }
 
 .ratingNumber{
-	font-size: 20px;
-	margin-top:-4px;
-}
+	font-size: 16px;
+	margin-top:-1px;
+	margin-left: -4px;
 }
 
 .attributeText{
-	font-size: 18px;
+	font-size: 12px;
+	margin-top:2px;
 }
+}
+
 
 .progress {
 	background: rgba(255, 250, 250, 1);
