--- a/Lyst/WebContent/thelistStyle.css
+++ b/Lyst/WebContent/thelistStyle.css
@@ -1,13 +1,24 @@
 .attributeBox {
 	text-align: center;
-	font-size: 20px;
 	display: inline-block;
+	position: relative;
+	height: 100px;
 }
 
 .attributeBoxMini {
 	text-align: center;
 	font-size: 20px;
 	display: inline-block;
+	position: relative;
+	height: 70px;
+}
+
+.itemName {
+	font-weight:600;
+}
+
+.attributeName{
+	postion: absolute;
 }
 
 .positionRelativeContainer {
@@ -45,6 +56,7 @@
 }
 
 span.redRating {
+	position: absolute;
 	background: #5133AB;
 	border-radius: 50%;
 	color: #ffffff;
@@ -148,13 +160,19 @@ span.redRating:hover {
 		width: 65px;
 		height: 65px;
 		font-size: 32px;
+		left:20%;
+		top:55%;
 	}
 	.ratingNumber {
 	margin-top: 8px;
 }
+.attributeName{
+	font-size: 16px;
+}
 .attributeBox{
 		margin-top: 40px;
 		cursor: pointer;
+	width: 110px;
 }
 .itemName {
 	margin-top:75px;
@@ -173,13 +191,14 @@ span.redRating:hover {
    margin-top:100px;
 }
 }
-
 /* Landscape tablets and medium desktops */
 @media ( min-width : 992px) and (max-width: 1199px) {
 	span.redRating {
 		width: 55px;
 		height: 55px;
 		font-size: 28px;
+		left:15%;
+		top:45%;
 	}
 	.ratingNumber {
 	margin-top:5px;
@@ -187,6 +206,7 @@ span.redRating:hover {
 .attributeBox{
 		margin-top: 40px;
 		cursor: pointer;
+	width: 92px;
 }
 .itemName {
 	margin-top:75px;
@@ -202,7 +222,7 @@ span.redRating:hover {
 	font-size: 20px;
 }
 .attributeName{
-	font-size: 16px;
+	font-size: 14px;
 }
 .btn-arrow-right,
 .btn-arrow-left {
@@ -216,6 +236,8 @@ span.redRating:hover {
 		width: 45px;
 		height: 45px;
 		font-size: 24px;
+		left:15%;
+		top:45%;
 	}
 	.ratingNumber {
 	margin-top: -2px;
@@ -223,10 +245,13 @@ span.redRating:hover {
 .attributeBox{
 		margin-top: 40px;
 		cursor: pointer;
+	width: 72px;
 }
 .itemName {
 	margin-top:75px;
 	color: black;
+	font-size: 16px;
+	margin-left:3px;
 }
 .listItemImage {
 	height: 100px;
@@ -234,12 +259,8 @@ span.redRating:hover {
 	margin-top:-30px;
 	margin-left: 30px;
 }
-.itemName{
-	font-size: 16px;
-	margin-left:3px;
-}
 .attributeName{
-	font-size: 12px;
+	font-size: 10px;
 }
 .numberText{
 	font-size: 20px;
@@ -258,16 +279,140 @@ max-width
 767px)
 {
 	span.redRating {
+		width: 50px;
+		height: 50px;
+		font-size: 24px;
+		left:30%;
+		top:55%;
+	}
+	.ratingNumber {
+	margin-top: -2px;
+}
+.attributeBoxMini{
+		margin-bottom: 30px;
+		cursor: pointer;
+		width: 132px;
+}
+.itemName{
+	margin-top: 0px;
+	color: black;
+}
+.attributeName{
+	font-size: 14px;
+}
+.listItemImage {
+	height: 200px;
+	width: 200px;
+}
+.numberText{
+	font-size: 32px;
+}
+.btn-arrow-right,
+.btn-arrow-left {
+   margin-top:20px;
+}
+}
+/* Landscape phones and portrait tablets */
+@media
+(
+max-width
+:
+677px)
+{
+	span.redRating {
 		width: 45px;
 		height: 45px;
 		font-size: 24px;
+		left:30%;
+		top:46%;
 	}
 	.ratingNumber {
-	margin-top: 0px;
+	margin-top: -2px;
 }
 .attributeBoxMini{
-		margin-top: 10px;
+		margin-bottom: 30px;
 		cursor: pointer;
+		width: 120px;
+}
+.itemName{
+	margin-top: 0px;
+	color: black;
+}
+.attributeName{
+	font-size: 12px;
+}
+.listItemImage {
+	height: 200px;
+	width: 200px;
+}
+.numberText{
+	font-size: 32px;
+}
+.btn-arrow-right,
+.btn-arrow-left {
+   margin-top:20px;
+}
+}
+@media
+(
+max-width
+:
+607px)
+{
+	span.redRating {
+		width: 45px;
+		height: 45px;
+		font-size: 24px;
+		left:24%;
+		top:46%;
+	}
+	.ratingNumber {
+	margin-top: -2px;
+}
+.attributeBoxMini{
+		margin-bottom: 30px;
+		cursor: pointer;
+		width: 100px;
+}
+.itemName{
+	margin-top: 0px;
+	color: black;
+}
+.attributeName{
+	font-size: 12px;
+}
+.listItemImage {
+	height: 200px;
+	width: 200px;
+}
+.numberText{
+	font-size: 32px;
+}
+.btn-arrow-right,
+.btn-arrow-left {
+   margin-top:20px;
+}
+}
+@media
+(
+max-width
+:
+520px)
+{
+	span.redRating {
+		width: 45px;
+		height: 45px;
+		font-size: 24px;
+		left:24%;
+		top:46%;
+	}
+	.ratingNumber {
+	margin-top: -2px;
+}
+.attributeBoxMini{
+		margin-bottom: 30px;
+		cursor: pointer;
+		width: 90px;
 }
 .itemName{
 	margin-top: 0px;
@@ -292,20 +437,25 @@ max-width
 /* Portrait phones and smaller */
 @media ( max-width : 480px) {
 	span.redRating {
-		width: 26px;
-		height: 26px;
-		font-size:14px;
+		width: 35px;
+		height: 35px;
+		font-size:18px;
+				left:30%;
+		top:68%;
 	}
 	.ratingNumber {
-	margin-top: -12px;
+	margin-top: -8px;
 }
 .attributeName{
-	font-size: 8px;
+	font-size: 10px;
 }
 .attributeBoxMini{
 		margin-top: 5px;
 		cursor: pointer;
+				width: 80px;
+				height: 40px;
 }
+
 .itemName{
 	margin-top: 0px;
 	color: black;
@@ -321,6 +471,94 @@ max-width
 .btn-arrow-left {
    margin-top:20px;
 }
+}
+/* Portrait phones and smaller */
+@media ( max-width : 410px) {
+	span.redRating {
+		width: 30px;
+		height: 30px;
+		font-size:16px;
+					left:30%;
+		top:68%;
+	}
+	.ratingNumber {
+	margin-top: -10px;
+}
+.attributeName{
+	font-size: 10px;
+}
+.attributeBoxMini{
+		margin-top: 5px;
+		cursor: pointer;
+				width: 75px;
+				height: 40px;
+}
+
+.itemName{
+	margin-top: 0px;
+	color: black;
+}
+.listItemImage {
+	height: 200px;
+	width: 200px;
+}
+.numberText{
+	font-size: 32px;
+}
+.btn-arrow-right,
+.btn-arrow-left {
+   margin-top:20px;
+}
+}
+/* Portrait phones and smaller */
+@media ( max-width : 360px) {
+	span.redRating {
+		width: 26px;
+		height: 26px;
+		font-size:14px;
+					left:30%;
+		top:75%;
+	}
+	.ratingNumber {
+	margin-top: -12px;
+}
+.attributeName{
+	font-size: 10px;
+}
+.attributeBoxMini{
+		margin-top: 5px;
+		cursor: pointer;
+				width: 75px;
+				height: 40px;
+}
+
+.itemName{
+	margin-top: 0px;
+	color: black;
+}
+.listItemImage {
+	height: 200px;
+	width: 200px;
+}
+.numberText{
+	font-size: 32px;
+}
+.btn-arrow-right,
+.btn-arrow-left {
+   margin-top:20px;
+}
+}
+/* Largest desktops and laptops */
+@media ( min-width : 1600px) {
+.attributeBox{
+		margin-top: 40px;
+		cursor: pointer;
+	width: 135px;
+}
+.attributeName{
+	font-size: 20px;
+}
+	
 }
 
 .btn-arrow-right,
@@ -425,5 +663,5 @@ max-width
 }
 
 .toggleAttButton{
-	margin-top:70px;
+	margin-top:100px;
 }
